# Enerlytics

./: .gitignore  README.md
backend/: README.md  enerlytics_backup.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e430c95a282_create_initial_reporting_schema.py  a12363614ed5_create_reports_table.py
backend/api/: routes.py
backend/app/: main.py
backend/app/api/: dependencies.py  routes.py
backend/app/api/mappers/: __init__.py  report_analysis_mapper.py  report_mapper.py  report_query_mapper.py
backend/app/api/routes/: reports.py
backend/app/api/schemas/: report.py  report_analysis.py  report_query.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/mappers/: report_mapper.py
backend/app/db/models/: __init__.py  base_model.py  report.py
backend/app/domain/analysis/: enums.py  report_analysis.py
backend/app/domain/reporting/: enums.py  exceptions.py  page.py  query.py  report.py  repository.py  service.py  value_objects.py
backend/app/infrastructure/ai/: analyzer.py  heuristic_analyzer.py
backend/app/infrastructure/persistence/: sqlalchemy_report_repository.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_reports_api.py
backend/tests/api/mappers/: test_report_analysis_mapper.py
backend/tests/domain/: test_confidence_score.py  test_geo_location.py  test_observation_time.py  test_report.py  test_report_analysis.py
backend/tests/repositories/: conftest.py  test_sqlalchemy_report_repository.py
backend/tests/services/: test_report_service.py
(+1 files in other folders)
